Yoga app with banner and interstitial test 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Yoga App</string>
+    <string name="app_name">Yoga Workout  and Fitness App</string>
 
     <string name="pose1">    Step 1:- Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
                              Step 2:- Your body should form a straight line from your shoulders to your ankles. \n\n
